FIxed overflow bug

--- a/style.css
+++ b/style.css
@@ -16,35 +16,68 @@ body {
     --container-background-color: hsl(210, 46%, 95%); 
     --dan-background-color: hsl(263, 55%, 52%); 
     --jon-background-color: hsl(217, 19%, 35%); 
+    --pat-background-color: hsl(219, 29%, 14%);
+    --default-background-color: hsl(0, 0%, 100%); 
 }
 
 .container {
     display: grid;
     place-items: center;
-    grid-template-rows: 10fr auto;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
     background: var(--container-background-color);
+    grid-template-rows: 10fr auto;
 }
 
 main {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr 1fr;
-    gap: 1%;
-    padding: 1%;
+    gap: 2%;
+    padding: 12%;
+}
+
+.box {
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 4%;
 }
 
 .box img{
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
+}
+
+.box p{
+    Font-size: 13px;
+    line-height: 1.5;
+}
+
+.box h1{
+    font-size: 20px;
+}
+
+.image-row {
+    display: flex;
+    align-items: center;
+}
+
+.image-row h2 {
+    font-size: 16px;
+    margin-left: 2%;
+}
+
+.image-row h2 span{
+    font-size: 14px;
 }
 
 #dan {
     background: url(./images/bg-pattern-quotation.svg);
     background-repeat: no-repeat;
-    background-position: top, right;
+    background-position: 80% 0%;
     background-color: var(--dan-background-color);
     grid-row: 1 / 2; 
     grid-column: 1 / 3;
@@ -57,19 +90,29 @@ main {
 #kira {
     grid-column: 4 / 4 ;
     grid-row: 1 / 3;
+
+    background-color: var(--default-background-color);
 }
 
 #jean {
     grid-row: 2 / 2;
+    background-color: var(--default-background-color);
 }
 
 #pat {
     grid-column: 2 / 4;
+    background-color: var(--pat-background-color);
+}
+
+#dan h1, #jon h1, #pat h1{
+    color: var(--default-background-color);
+    font-weight: 500;
 }
 
 @media screen and (max-width: 375px){
     main {
         grid-template-columns: 1fr;
+        padding: 4%;
     }
     #dan {
         grid-row: auto; 
@@ -79,11 +122,9 @@ main {
         grid-column: auto;
         grid-row: auto;
     }
-
     #jean {
         grid-row: auto; 
     }
-
     #pat {
         grid-column: auto;
     }
